--- a/css/style.css
+++ b/css/style.css
@@ -71,3 +71,15 @@
     background-size: cover;
     background-repeat: no-repeat;
 }
+
+.container{
+    width: 100%;
+    height: 300px;
+    background-color: red;
+}
+
+.container h1{
+    color: yellow;
+    font-size: 30px;
+    text-align: center;
+}
